Add database schema, Google Sheets integration, and Settings page

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ RESEND_API_KEY=your-resend-api-key-here
 
 # Base URL for your application (update when deploying)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Google Sheets OAuth
+# Get these from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
