--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +23,7 @@
     "date-fns": "^4.1.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^164.1.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.552.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
