--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.66.0",
+    "react-webcam": "^7.2.0",
     "resend": "^3.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
